cmake_minimum_required(VERSION 3.1.3)
PROJECT(Common)

AUX_SOURCE_DIRECTORY(./ SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Core SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Timer SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Define SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Manager SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Object SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Module SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Protocol SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Global SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Script SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Coroutine SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Other SUPER_SRC)
AUX_SOURCE_DIRECTORY(./NetWork SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Thread SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Util SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Script/luaExtension SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Script/LuaType SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Script/Util SUPER_SRC)

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(./Core)
INCLUDE_DIRECTORIES(./Define)
INCLUDE_DIRECTORIES(./Timer)
INCLUDE_DIRECTORIES(./Manager)
INCLUDE_DIRECTORIES(./Object)
INCLUDE_DIRECTORIES(./Protoc)
INCLUDE_DIRECTORIES(./Module)
INCLUDE_DIRECTORIES(./Global)
INCLUDE_DIRECTORIES(./Script)
INCLUDE_DIRECTORIES(./Coroutine)
INCLUDE_DIRECTORIES(./Other)
INCLUDE_DIRECTORIES(./NetWork)
INCLUDE_DIRECTORIES(./Thread)

INCLUDE_DIRECTORIES(./Script/luaExtension)
INCLUDE_DIRECTORIES(./Script/LuaType)
INCLUDE_DIRECTORIES(./Script/Util)

INCLUDE_DIRECTORIES(./Util)
INCLUDE_DIRECTORIES(../ServerData)
INCLUDE_DIRECTORIES(../Libs/include/rapidjson)
INCLUDE_DIRECTORIES(../Libs/include/protobuf)
INCLUDE_DIRECTORIES(../Libs/include/asio)
INCLUDE_DIRECTORIES(../Libs/include/lua5.3)
INCLUDE_DIRECTORIES(../Libs/include/spdlog)

LINK_DIRECTORIES(.././Libs/lib)
SET(CMAKE_CXX_COMPILER "ccache")
SET(CMAKE_CXX_COMPILER_ARG1 "g++") 

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -std=gnu++11" )
SET(CMAKE_BUILD_TYPE Debug)
SET(LIBRARY_OUTPUT_PATH ../Libs/lib)
ADD_LIBRARY(Common STATIC ${SUPER_SRC})

#TARGET_LINK_LIBRARIES(Common protobuf ${MY_ADDLIB})
